--- a/src/Shop/styles.css
+++ b/src/Shop/styles.css
@@ -1,4 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 /*shop navheader styles*/
+
+.body{
+    background: radial-gradient(29.91% 71.88% at 54.58% 70.25%, rgba(4, 59, 199, 0.2695) 0%, rgba(213, 252, 255, 0.2695) 69.88%);
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+}
 
 .Nav-header{
     padding: 10px 5px 5px;
@@ -473,8 +485,9 @@ Qv-Modal-styles .Close-button .fas{
 .bread-crumb ul{
     padding: 10px 0;
     list-style: none;
-    font-size: 13px;
-    color: #adadad;
+    font-size: 16px;
+    font-weight: 600;
+    color: #212529;
     text-transform: uppercase;
 }
 .bread-crumb ul li{
@@ -484,7 +497,7 @@ Qv-Modal-styles .Close-button .fas{
 .bread-crumb ul li .bread-crumb-link{
     text-decoration: none;
     text-transform: uppercase;
-    color: #adadad;
+    color: #535659;
     font-weight: 500;
 }
 
