--- a/src/Authentication/styles.css
+++ b/src/Authentication/styles.css
@@ -2,7 +2,8 @@ body{
     background: #f5f5f5;
 }
 .Auth-box{
-    margin-top: 10%;
+    position: relative;
+    top: 50px;
     border-radius: 20px;
     background: #ffffff;
     box-shadow: 0px 0px 7px 4px rgba(212,212,212,0.75);
@@ -15,8 +16,6 @@ body{
     border-radius: 0px;
     padding: 10px 20px 30px 80px;
     margin-top: 10%;
-
-
 }
 .Form h5{
     font-size: 40px;
