--- a/src/Authentication/styles.css
+++ b/src/Authentication/styles.css
@@ -1,9 +1,15 @@
 body{
     background: #f5f5f5;
 }
+.Body{
+    width: 100%;
+    overflow-x: hidden;
+    padding: 40px 20px 80px 10px;
+}
 .Auth-box{
     position: relative;
     top: 50px;
+    margin: 10px 20px 30px;
     border-radius: 20px;
     background: #ffffff;
     box-shadow: 0px 0px 7px 4px rgba(212,212,212,0.75);
@@ -171,7 +177,7 @@ body{
 @media only screen and (max-width: 600px) {
 
     .Auth-box{
-        margin: 15% 5% 7% 5%;
+        margin: 15% 5% 10% 2%;
     }
 
     .Form {
