--- a/src/Dashboard/pages/pagesStyles.css
+++ b/src/Dashboard/pages/pagesStyles.css
@@ -202,7 +202,41 @@ a.itemside:hover .title {
     text-align: center;
 }
 
+/* ====================== box ==================== */
+.Images-row{
+    margin: 10px 0;
+}
+.Images-row .card-thumb{
+    margin-top: 20px;
+    width: 100%;
+    height: 180px;
+    cursor: pointer;
+    box-shadow: 1px 1px 5px 0px rgba(194,194,194,0.75);
+    -webkit-box-shadow: 1px 1px 5px 0px rgba(194,194,194,0.75);
+    -moz-box-shadow: 1px 1px 5px 0px rgba(194,194,194,0.75);
+}
+.Images-row .card-thumb:hover{
+    box-shadow: 1px 1px 5px 1px rgba(133,133,133,0.75);
+    -webkit-box-shadow: 1px 1px 5px 1px rgba(133,133,133,0.75);
+    -moz-box-shadow: 1px 1px 5px 1px rgba(133,133,133,0.75);
+}
+.Images-row .card-thumb .card-img-top{
+    width: 100%;
+    height: 150px;
+    object-fit: contain;
 
+}
+
+.Images-row .card-thumb .img-fluid{
+    width: 60%;
+    object-fit: contain;
+    cursor: pointer;
+}
+.Images-row .card-thumb .card-title{
+    font-size: 13px;
+    font-weight: 500;
+    text-align: center;
+}
 /* --------- description list --------*/
 [class*=dlist] {
     margin-bottom: 5px;
